; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_CreateDummyMedia.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_CreateDummyMedia.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"vlc://item-%d\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"item-%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @CreateDummyMedia to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CreateDummyMedia(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @asprintf(i8** %4, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %28

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @asprintf(i8** %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32* null, i32** %2, align 8
  br label %28

19:                                               ; preds = %13
  %20 = load i8*, i8** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32* @input_item_New(i8* %20, i8* %21)
  store i32* %22, i32** %7, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @free(i8* %25)
  %27 = load i32*, i32** %7, align 8
  store i32* %27, i32** %2, align 8
  br label %28

28:                                               ; preds = %19, %18, %12
  %29 = load i32*, i32** %2, align 8
  ret i32* %29
}

declare dso_local i32 @asprintf(i8**, i8*, i32) #1

declare dso_local i32* @input_item_New(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
